# automated_expense_tracker

./: .gitignore  README.md  apt.txt  categories.json  gmail_api.py  google_service.py  main.py  monopoly_parse.py  pdf_parser.py  pyproject.toml  recurring.json  requirements.txt  transactions.db  utils.py
pages/: 01_About.py  02_Dashboard.py  02_Settings.py  03_Configuration.py  03_Settings.py
